  02 Oct 2021;  <chymera@gentoo.org> -ChangeLog:
  dev-python/annexremote: removed changelog