@@ -1,2 +1,5 @@
+  04 Oct 2021;  <chymera@gentoo.org> annexremote-1.5.0.ebuild:
+  dev-python/annexremote: enabled test suite  passes
+
   02 Oct 2021;  <chymera@gentoo.org> -ChangeLog:
   dev-python/annexremote: removed changelog
